--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
                     <img src="./img/logo.png">
                 </a>
             </li>
-            <li> <a href="#">Inicio</a> </li>
-            <li> <a href="#">Contacto</a> </li>
+            <li> <a href="#"> Inicio </a> </li>
+            <li> <a href="#"> Contacto </a> </li>
         </ul>
     </nav>
 
-    <div>
+    <div class="container">
         <h1>Personajes de Rick and Morty</h1>
-            <section>
+            <section class="section-flex">
                 <article>
                     <header><h2>Rick Sanchez</h2></header>   
                     <img src="./img/Rick.jpeg">
