--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Document</title>
         <link href="./css/menu.css" rel="stylesheet"  type="text/css">
         <link href="./css/estilos.css" rel="stylesheet"  type="text/css">
+        <!-- Simbolos para hacer comentarios en html-->
 </head>
 <body>
     <nav>
@@ -24,128 +25,128 @@
     <div class="container">
         <h1>Personajes de Rick and Morty</h1>
             <section class="section-flex">
-                <article>
+                <article class="character">
                     <header><h2>Rick Sanchez</h2></header>   
                     <img src="./img/Rick.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Másculino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Morty Smith</h2></header>   
                     <img src="./img/Morty.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Másculino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
 
-                <article>
+                <article class="character">
                     <header><h2>Summer Smith</h2></header>   
                     <img src="./img/Summer.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Femenino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Beth Smith</h2></header>   
                     <img src="./img/Beth.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Femenino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Jerry Smith</h2></header>   
                     <img src="./img/Jerry.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Másculino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Arthricia</h2></header>   
                     <img src="./img/Arthricia.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Femenino</p>
                         <p> <b>Especie:</b> Felino</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Armagheadon</h2></header>   
                     <img src="./img/Armagheadon.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Másculino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                 <article>
+                 <article class="character">
                     <header><h2>Benjamin</h2></header>   
                     <img src="./img/Benjamin.jpeg">
-                    <div>
+                    <div class="Info-character">
                        <p> <b>Genero: </b> Másculino</p>
                        <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Birdperson</h2></header>   
                     <img src="./img/Birdperson.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Másculino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>BlimBLam</h2></header>   
                     <img src="./img/BlimBlam.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Másculino</p>
                         <p> <b>Especie:</b> Alienígena</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Brad</h2></header>   
                     <img src="./img/Brad.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Másculino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Davin</h2></header>   
                     <img src="./img/Davin.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Másculino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Diane Sanchez</h2></header>   
                     <img src="./img/DianeSanchez.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Femenino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
                 </article>
 
-                <article>
+                <article class="character">
                     <header><h2>Ethan</h2></header>   
                     <img src="./img/Ethan.jpeg">
-                    <div>
+                    <div class="Info-character">
                         <p> <b>Genero: </b> Másculino</p>
                         <p> <b>Especie:</b> Humano</p>
                     </div>         
